--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,4 @@
+@import "~antd/dist/antd.css";
 * {
   box-sizing: border-box;
 }
@@ -5,4 +6,19 @@
   width: 100vw;
   height: 100vh;
   background-color: #ededed;
+  display: flex;
+  overflow: hidden;
+}
+#components-layout-demo-responsive .logo {
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px;
+}
+
+.site-layout-sub-header-background {
+  background: #fff;
+}
+
+.site-layout-background {
+  background: #fff;
 }
