--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,6 @@
 @import "~antd/dist/antd.css";
+@import "codemirror/theme/eclipse.css";
+@import "codemirror/theme/ayu-mirage.css";
 * {
   box-sizing: border-box;
 }
