--- a/src/components/RightArea/components/ResponseHeader/index.less
+++ b/src/components/RightArea/components/ResponseHeader/index.less
@@ -1,18 +1,6 @@
-.one-row {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  word-break: break-all;
-}
-input {
-  padding-left: 0 !important;
-}
-.add-container {
+.header-body-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 8px;
-  input {
-    padding-left: 8px !important;
-    width: 320px;
-  }
+  flex: 1;
 }
