--- a/src/components/RightArea/index.less
+++ b/src/components/RightArea/index.less
@@ -21,10 +21,8 @@
     border-radius: 5px;
     margin-bottom: 16px;
     overflow: hidden;
-    & > div {
-      overflow: scroll;
-      height: 100%;
-    }
+    display: flex;
+    flex-direction: column;
   }
   .content-container {
     position: relative;
@@ -33,6 +31,17 @@
     padding: 0 16px 16px 16px;
     border-radius: 5px;
     overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    &.full-screen {
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 999;
+    }
   }
   .ant-switch.ant-switch-checked {
     height: 24px;
@@ -41,6 +50,9 @@
     height: 100%;
     overflow: hidden;
   }
+  //   button {
+  //     margin: 0 8px;
+  //   }
 }
 .empty {
   display: flex;
@@ -48,4 +60,16 @@
   align-items: center;
   height: 100vh;
   flex: 1;
+}
+.full-screen-btn {
+  margin-right: 8px;
+}
+.CodeMirror {
+  height: 100px !important;
+  flex: 1 !important;
+}
+.current-url {
+  margin-right: 60px;
+  color: #999;
+  font-size: 16px;
 }
