--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.CodeMirror-dialog.CodeMirror-dialog-top{
+  background-color: #fff!important;
+}
