--- a/src/components/RightArea/index.less
+++ b/src/components/RightArea/index.less
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+
     &.full-screen {
       position: absolute;
       left: 0;
@@ -72,4 +73,11 @@
   margin-right: 60px;
   color: #999;
   font-size: 16px;
+}
+.request-tools {
+  display: flex;
+  align-items: center;
+}
+.replay-btn {
+  margin-left: 30px;
 }
