--- a/src/components/RightArea/components/ResponseBody/index.less
+++ b/src/components/RightArea/components/ResponseBody/index.less
@@ -9,3 +9,18 @@
   justify-content: space-between;
   flex: 1;
 }
+.img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+  overflow: hidden;
+  .img-con {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+  }
+}
+.img-con {
+  margin-bottom: 15px;
+}
