--- a/src/components/RightArea/components/RequestSetting/index.less
+++ b/src/components/RightArea/components/RequestSetting/index.less
@@ -1,9 +1,12 @@
-.request-setting-container {
-  width: 400px;
+.prefix {
+  color: #888;
+}
+.input-container {
+  display: flex;
   & > * {
     margin-bottom: 10px;
   }
-}
-.prefix {
-  color: #888;
+  .wrap {
+    width: 30px;
+  }
 }
