add request method

--- a/src/components/LeftArea/index.less
+++ b/src/components/LeftArea/index.less
@@ -128,3 +128,21 @@
     }
   }
 }
+.menu-sub {
+  position: relative;
+  width: 230px;
+  .method {
+    position: absolute;
+    right: 0;
+    transform: translateX(20px) scale(0.78);
+    font-weight: bold;
+    font-size: 12px;
+  }
+}
+.ant-menu-item-only-child {
+  margin-left: -13px !important;
+  width: 120% !important;
+}
+.wrap-16 {
+  height: 16px;
+}
